--- a/PROJETO1.html
+++ b/PROJETO1.html
@@ -20,7 +20,7 @@
                 <h1>BEM VINDO<span></span></h1>
                 <H1>AO UNIVERSO<span></span></H1>
                 <H1>DOS<span></span></H1>
-                <h1>VIDEO GAMES!!<span></span></h1>
+                <h1>VIDEO GAMES!<span></span></h1>
                 <a href="#portifolio" type="button" class="cta">VAMOS LA</a>
             </div>
         </div>
